--- a/app/views/_shared/_notice.html.slim
+++ b/app/views/_shared/_notice.html.slim
@@ -3,3 +3,9 @@
     i.icn 😼
     p = sanitize(notice)
     i.icn 😼
+
+- if alert.present?
+  article.notice.is-info.is-error
+    i.icn 😿
+    p = sanitize(alert)
+    i.icn 😿
