--- a/app/views/sales/index.html.slim
+++ b/app/views/sales/index.html.slim
@@ -11,11 +11,16 @@ main.wide
       thead
         tr
           th.text-center Image
-          th Customer and Products
+          th
+            | Customer
+            br
+            | Products
           th Status
           th.right Price
-          th Created  ▾
-          th Updated
+          th
+            | Created  ▾
+            br
+            | Updated
           th Woo ID
           th.right Actions
       tbody
