--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -158,8 +158,7 @@ main.wide.flex.flex-col.gap.w-pd
           thead
             th Supplier
             th Title
-            - if @product.variations.any?
-              th Variation?
+            th Variation
             th Time ago
             th.right Item Price, $
             th Qty
@@ -175,6 +174,7 @@ main.wide.flex.flex-col.gap.w-pd
                   td = purchase.variation.title
                 - else
                   td = purchase.product.full_title
+                  td
                 td.no-wrap = time_ago_in_words purchase.created_at
                 td.right.mono = format_money purchase.item_price
                 td = purchase.amount
