--- a/app/views/purchases/show.html.slim
+++ b/app/views/purchases/show.html.slim
@@ -19,6 +19,7 @@ nav
   ul.gap
     li
       = render "_shared/action-edit", route: url_for(controller: "#{@purchase.model_name.plural}", action: "edit", id: @purchase), btn: true
+
     - if @purchase.purchased_products.none?
       li data-controller="move-items"
         = render "_shared/move_to_warehouse/form", form_url: move_purchases_path(purchase_id: @purchase.id)
@@ -33,48 +34,48 @@ main.wide.flex.flex-col.gap.no-bd
       .table-cards-group data-controller="move-items"
         = render "_shared/move_to_warehouse/form", form_url: move_purchased_products_path(purchase_id: @purchase.id)
 
-      .table-card
-        .table-hgroup.flex.justify-between
-          h3.flex.justify-between.w-full
-            span Purchased Products
-            span = @purchased_products.size
+        .table-card
+          .table-hgroup.flex.justify-between
+            h3.flex.justify-between.w-full
+              span Purchased Products
+              span = @purchased_products.size
 
-        = render "_shared/move_to_warehouse/form", form_url: move_purchased_products_path, options: {redirect_to_product_sale: true}
+          = render "_shared/move_to_warehouse/form", form_url: move_purchased_products_path, options: {redirect_to_product_sale: true}
 
-        table role="grid" data-controller="table"
-          thead
-            = render "_shared/move_to_warehouse/th"
-            th Warehouse
-            th Sale
-            th Length × Width × Height, cm
-            th.right Kg
-            th.right Expenses
-            th.right Shipping
-            th.right Actions
-          tbody
-            - @purchased_products.each do |pp|
-              tr(
-                class="hoverable"
-                data-action="click->table#goTo"
-                data-table-url-param=purchased_product_path(pp)
-              )
-                = render "_shared/move_to_warehouse/td", id: pp.id
-                td = pp.warehouse.name
-                td = pp.product_sale&.title
-                td.mono = format_item_size(pp)
-                td.mono.right = pp.weight
-                td.mono.right = format_money pp.expenses
-                td.mono.right = format_money pp.shipping_price
-                td.actions
-                  = render "_shared/action-destroy", route: purchased_product_path(pp)
-                  = render "_shared/action-edit", route: edit_purchased_product_path(pp, redirect_to_product_sale: true)
+          table role="grid" data-controller="table"
+            thead
+              = render "_shared/move_to_warehouse/th"
+              th Warehouse
+              th Sale
+              th Length × Width × Height, cm
+              th.right Kg
+              th.right Expenses
+              th.right Shipping
+              th.right Actions
+            tbody
+              - @purchased_products.each do |pp|
+                tr(
+                  class="hoverable"
+                  data-action="click->table#goTo"
+                  data-table-url-param=purchased_product_path(pp)
+                )
+                  = render "_shared/move_to_warehouse/td", id: pp.id
+                  td = pp.warehouse.name
+                  td = pp.product_sale&.title
+                  td.mono = format_item_size(pp)
+                  td.mono.right = pp.weight
+                  td.mono.right = format_money pp.expenses
+                  td.mono.right = format_money pp.shipping_price
+                  td.actions
+                    = render "_shared/action-destroy", route: purchased_product_path(pp)
+                    = render "_shared/action-edit", route: edit_purchased_product_path(pp, redirect_to_product_sale: true)
 
 
   .cards
-
     - if @purchase.product.image.present?
       img.product src="#{@purchase.product.image}"
-    .flex.card.grow
+
+    .card.flex.grow
       .column
         .title ID
         p = @purchase.id
