--- a/app/views/sales/_sale.html.slim
+++ b/app/views/sales/_sale.html.slim
@@ -9,8 +9,9 @@ tr.hoverable id="#{dom_id sale}" data-action="click->table#goTo" data-table-url-
     ul.product-variations
       - sale.product_sales.each do |ps|
         li
-          = format_purchased_sold_ratio(ps.purchased_products.size, ps.qty)
-          | 
+          - if sale.active?
+            = format_purchased_sold_ratio(ps.purchased_products.size, ps.qty)
+            | 
           = ps.title
   td = format_sale_status sale.status
   td.right.mono = format_money sale.total
