--- a/app/assets/stylesheets/misc.css
+++ b/app/assets/stylesheets/misc.css
@@ -117,3 +117,38 @@ mark.smaller {
   vertical-align: text-top;
   font-size: smaller;
 }
+
+.link-icn {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  margin: 0;
+  border-radius: 8px;
+  background-color: var(--primary-muted);
+  padding: 0;
+  width: 28px;
+  height: 24px;
+}
+
+.link-icn.in-heading {
+  position: absolute;
+  top: -10px;
+  right: -30px;
+}
+
+.link-icn:hover {
+  background-color: var(--primary-focus);
+}
+
+.link-icn:hover svg {
+  color: var(--primary-hover);
+}
+
+.link-icn svg {
+  display: block;
+  transform: rotate(-45deg);
+  width: 18px;
+  height: 18px;
+  color: var(--primary);
+}
