--- a/app/assets/stylesheets/misc.css
+++ b/app/assets/stylesheets/misc.css
@@ -124,17 +124,26 @@ mark.smaller {
   align-items: center;
   cursor: pointer;
   margin: 0;
-  border-radius: 8px;
+  border: 1px solid var(--primary-muted);
+  border-radius: 10px;
   background-color: var(--primary-muted);
   padding: 0;
   width: 28px;
-  height: 24px;
+  height: 26px;
 }
 
-.link-icn.in-heading {
+.link-icn.h1 {
   position: absolute;
   top: -10px;
   right: -30px;
+}
+
+.link-icn.td {
+  vertical-align: -3px;
+  margin-left: 4px;
+  padding: 4px;
+  width: 26px;
+  height: 24px;
 }
 
 .link-icn:hover {
