--- a/app/assets/stylesheets/misc.css
+++ b/app/assets/stylesheets/misc.css
@@ -52,10 +52,18 @@ i.icn {
   box-shadow: var(--box-shadow-menu);
   border-radius: var(--border-radius);
   background-color: var(--mark-background-color);
-  padding: 16px 24px 32px 16px;
-  width: 250px;
+  padding: 16px 24px 24px 16px;
+  width: auto;
+  min-width: 200px;
+  max-width: 250px;
   color: var(--mark-color);
   font-size: smaller;
+  text-wrap: pretty;
+}
+
+.memo-notice.away {
+  top: 24px;
+  left: 24px;
 }
 
 .semi-link {
@@ -125,11 +133,11 @@ mark.smaller {
   cursor: pointer;
   margin: 0;
   border: 1px solid var(--primary-muted);
-  border-radius: 10px;
+  border-radius: 8px;
   background-color: var(--primary-muted);
   padding: 0;
-  width: 28px;
-  height: 26px;
+  width: 24px;
+  height: 24px;
 }
 
 .link-icn.h1 {
@@ -139,11 +147,12 @@ mark.smaller {
 }
 
 .link-icn.td {
-  vertical-align: -3px;
+  vertical-align: -2px;
   margin-left: 4px;
-  padding: 4px;
-  width: 26px;
-  height: 24px;
+  border-radius: 6px;
+  padding: 2px;
+  width: 22px;
+  height: 22px;
 }
 
 .link-icn:hover {
@@ -156,8 +165,9 @@ mark.smaller {
 
 .link-icn svg {
   display: block;
-  transform: rotate(-45deg);
-  width: 18px;
-  height: 18px;
+  margin-bottom: 1px;
+  margin-left: 2px;
+  width: 16px;
+  height: 16px;
   color: var(--primary);
 }
