--- a/app/views/sales/show.html.slim
+++ b/app/views/sales/show.html.slim
@@ -15,104 +15,9 @@ nav
               = inline_svg "link-icn.svg"
         h4 = @sale.title
   ul
-    li
-      = render "_shared/action-edit", route: url_for(controller: "#{@sale.model_name.plural}", action: "edit", id: @sale), btn: true
+    li = render "_shared/action-edit", route: url_for(controller: "#{@sale.model_name.plural}", action: "edit", id: @sale), btn: true
 
 main.wide.flex.flex-col.gap.w-pd.no-bd
-
-  - if @sale.product_sales.present?
-    .table-card.full-width
-
-      .sales_show__order-list.flex.justify-between.items-center
-        h3 Order Items List
-        = render "link_btn", sale: @sale
-
-      table role="grid" data-controller="table"
-        thead
-          th.text-center Image
-          th Product
-          th Variation
-          th.right Price, $
-          th.right Purchased / Sold Amount
-        tbody
-          - @sale.product_sales.each_with_index do |ps, idx|
-            tr.hoverable(
-              data-action="click->table#goTo"
-              data-table-url-param=product_sale_path(ps)
-            )
-              td.text-center = render "_shared/preloadable_img", src: thumb_url(ps.product), class_names: "zoomable", width: 100
-              td
-                = ps.product.full_title 
-                - if ps.purchased_products.present?
-                  = render "purchased_products", purchased_products: ps.purchased_products
-              td = ps.variation.present? ? ps.variation.title : "-"
-              td.right.mono = format_money ps.price
-              td.right = format_purchased_sold_ratio(ps.purchased_products.size, ps.qty)
-
-
-  .cards
-    .card.grow
-      .title Status
-      p = @sale.status
-      .title Customer
-      p = "#{@sale.customer.first_name} #{@sale.customer.last_name}"
-      .title Email
-      p = safe_blank_render @sale.customer.email
-      .title Note
-      p = safe_blank_render @sale.note
-      .title Customer Woo ID
-      - if @sale.customer.woo_id.present?
-        p = link_to @sale.customer.woo_id, "https://store.handsomecake.com/wp-admin/user-edit.php?user_id=#{@sale.customer.woo_id}"
-      - else
-        p = safe_blank_render @sale.customer.woo_id
-
-    .card
-      .title Total, $
-      p.right.fit.mono = format_money @sale.total
-      .title Discount
-      p.right.fit.mono = format_money @sale.discount_total
-      .title Shipping
-      p.right.fit.mono = format_money @sale.shipping_total
-
-    .card
-      .title ID
-      p = @sale.id
-      .title Woo Created
-      p = safe_blank_render format_date(@sale.woo_created_at)
-      .title Woo Upd.
-      p = safe_blank_render format_date(@sale.woo_updated_at)  
-      .title Order Woo ID
-      - if @sale.woo_id.present?
-        p = link_to @sale.woo_id, "https://store.handsomecake.com/wp-admin/post.php?post=#{@sale.woo_id}&action=edit"
-      - else
-        p = safe_blank_render @sale.woo_id
-
-
-  .table-card.full-width
-    h3 Address
-
-    table role="grid"
-      thead
-        th Address 1
-        - if @sale.address_2.present?
-          th Address 2
-        th City
-        - if @sale.company.present?
-          th Company
-        th Country
-        th Phone
-        th Postcode
-        - if @sale.state.present?
-          th State
-      tbody
-        td = safe_blank_render @sale.address_1
-        - if @sale.address_2.present?
-          td = safe_blank_render @sale.address_2
-        td = safe_blank_render @sale.city
-        - if @sale.company.present?
-          td = safe_blank_render @sale.company
-        td = safe_blank_render @sale.country
-        td = safe_blank_render @sale.customer.phone
-        td = safe_blank_render @sale.postcode
-        - if @sale.state.present?
-          td = safe_blank_render @sale.state
+  = render "order_items_list", sale: @sale
+  = render "sale_attributes", sale: @sale
+  = render "sale_address", sale: @sale
