Fix broken icon

--- a/app/assets/stylesheets/misc.css
+++ b/app/assets/stylesheets/misc.css
@@ -1,6 +1,6 @@
 i.icn {
   font-style: normal;
-  font-family: "Noto Emo";
+  font-family: "Noto Emoji";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
