--- a/app/views/purchased_products/_form.html.slim
+++ b/app/views/purchased_products/_form.html.slim
@@ -28,6 +28,9 @@
   = form.label :shipping_price
   = form.text_field :shipping_price
 
+  = form.label :tracking_number
+  = form.text_field :tracking_number
+
   - if purchased_product.images.attached?
     br
     .card.flex.wrap.gap.even-pd.items-end
