--- a/app/views/notifications_mailer/warehouse_changed_email.text.slim
+++ b/app/views/notifications_mailer/warehouse_changed_email.text.slim
@@ -12,8 +12,8 @@
 | Order Item: #{@item_name}
 = "\r\n"
 = "\r\n"
-- if tracking_number.present?
-  | You can track your order on this page: #{tracking_url} using the following tracking code #{tracking_number}.
+- if @tracking_number.present?
+  | You can track your order on this page: #{@tracking_url} using the following tracking code #{@tracking_number}.
   = "\r\n"
   = "\r\n"
 | If you have any questions about this update, don't hesitate to reach out to us at store@handsomecake.com or reply to this email.
