--- a/app/views/notifications_mailer/product_purchased_email.text.slim
+++ b/app/views/notifications_mailer/product_purchased_email.text.slim
@@ -9,7 +9,7 @@
 | Order Item: #{@item_name}
 = "\r\n"
 = "\r\n"
-| If you have any questions or need to make changes, feel free to contact us at store@handsomecake.com or reply to this email.
+| If you have any questions or need to make changes, feel free to contact us at support@handsomecake.com
 = "\r\n"
 = "\r\n"
 | Thank you for choosing us!
