--- a/app/views/notifications_mailer/warehouse_changed_email.text.slim
+++ b/app/views/notifications_mailer/warehouse_changed_email.text.slim
@@ -16,7 +16,7 @@
   | You can track your order on this page: #{@tracking_url} using the following tracking code #{@tracking_number}.
   = "\r\n"
   = "\r\n"
-| If you have any questions about this update, don't hesitate to reach out to us at store@handsomecake.com or reply to this email.
+| If you have any questions about this update, don't hesitate to reach out to us at support@handsomecake.com
 = "\r\n"
 = "\r\n"
 | Thank you for shopping with us!
