Fix icon font naming

--- a/app/assets/stylesheets/fonts.css
+++ b/app/assets/stylesheets/fonts.css
@@ -9,7 +9,7 @@
   font-style: normal;
   font-weight: 400;
   src: url("noto-emoji-400.woff2") format("woff2");
-  font-family: "Noto Emo";
+  font-family: "Noto Emoji";
 }
 
 @font-face {
