--- a/app/assets/stylesheets/misc.css
+++ b/app/assets/stylesheets/misc.css
@@ -1,8 +1,10 @@
 i.icn {
   font-style: normal;
-  font-family: "Noto Emoji";
+  font-family: "Noto Emoji", serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-weight: 400;
+  font-optical-sizing: auto;
 
   &.xxl {
     font-size: 10rem;
