Add more unlink links

--- a/app/assets/stylesheets/misc.css
+++ b/app/assets/stylesheets/misc.css
@@ -173,3 +173,7 @@ mark.smaller {
   height: 16px;
   color: var(--primary);
 }
+
+.no-bg-hover:hover {
+  background-color: transparent !important;
+}
