--- a/app/views/purchases/show.html.slim
+++ b/app/views/purchases/show.html.slim
@@ -71,6 +71,10 @@ main.wide.flex.flex-col.gap.no-bd
                   td.mono.right = format_money pp.expenses
                   td.mono.right = format_money pp.shipping_price
                   td.actions
+                    - if pp.sale
+                      = link_to unlink_purchased_product_path(id: pp.id), class: "no-events danger", data: { turbo_confirm: "Are you sure?", turbo_method: :post }
+                        i.icn ✂︎
+                        | Unlink
                     = render "_shared/action-destroy", route: purchased_product_path(pp)
                     = render "_shared/action-edit", route: edit_purchased_product_path(pp)
 
