--- a/app/views/sales/_purchased_products.html.slim
+++ b/app/views/sales/_purchased_products.html.slim
@@ -15,3 +15,7 @@ ul.product-variations
         - if purchased_product.purchase.item_price
           | — cost: $
           .mono.inline = format_money purchased_product.purchase.item_price
+      br
+      = link_to unlink_purchased_product_path(id: purchased_product.id), class: "no-events danger no-bg-hover", data: { turbo_confirm: "Are you sure?", turbo_method: :post }
+        i.icn ✂︎
+        | Unlink
