Add German translation

--- a/app/views/notifications_mailer/product_purchased_email.text.slim
+++ b/app/views/notifications_mailer/product_purchased_email.text.slim
@@ -1,3 +1,30 @@
+| Hallo #{@customer_name},
+= "\r\n"
+= "\r\n"
+| Tolle Neuigkeiten! Der Status Deiner Bestellung #{@order_number} wurde aktualisiert.
+= "\r\n"
+= "\r\n"
+| Aktueller Status: #{@warehouse_name}
+= "\r\n"
+| Artikel: #{@item_name}
+= "\r\n"
+= "\r\n"
+| Wenn Du Fragen zu Deiner Bestellung hast, zögere bitte nicht, uns unter support@handsomecake.com zu kontaktieren.
+= "\r\n"
+= "\r\n"
+| Danke, dass Du bei uns eingekauft hast!
+= "\r\n"
+= "\r\n"
+| Beste Grüße aus Stuttgart,
+= "\r\n"
+| Dein HandsomeCake Goodies Team
+= "\r\n"
+= "\r\n"
+
+| ---
+
+= "\r\n"
+= "\r\n"
 | Hello #{@customer_name},
 = "\r\n"
 = "\r\n"
