--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -13,6 +13,7 @@ main.wide
           th Image
           th Full name
           th Woo ID
+          th Shopify ID
           th Actions
       tbody
         = render @products
