--- a/app/views/products/_product_attributes.html.slim
+++ b/app/views/products/_product_attributes.html.slim
@@ -33,4 +33,4 @@
       p = link_to product.woo_id, product.store_link, :target => "_blank", "rel" => "noopener noreferrer"
     - if product.shopify_id.present?
       .title Shopify ID
-      p = link_to product.shopify_id, product.store_link, :target => "_blank", "rel" => "noopener noreferrer"
+      p = link_to product.shopify_id, product.shopify_store_link, :target => "_blank", "rel" => "noopener noreferrer"
