--- a/app/assets/stylesheets/buttons.css
+++ b/app/assets/stylesheets/buttons.css
@@ -64,7 +64,7 @@ button.is-inverted:hover {
   border: 1px solid var(--primary-unmuted);
   border-radius: var(--border-radius);
 
-  padding: 0.35em 0.6em;
+  padding: 0.5em 1em;
 
   width: auto;
   font-size: calc(var(--font-size) / 1.2);
@@ -109,6 +109,11 @@ button.is-inverted:hover {
   color: var(--form-element-invalid-active-border-color);
 }
 
+.btn.is-muted {
+  border-color: var(--muted-border-color);
+  color: var(--muted-color);
+}
+
 .btn.is-danger:hover {
   border-color: rgba(255, 0, 0, 0.12);
   background-color: rgba(255, 0, 0, 0.1);
@@ -122,4 +127,16 @@ button.is-inverted:hover {
 .btn.xl {
   padding: 0.75em;
   font-size: calc(var(--font-size) * 1);
+}
+
+.btn.small {
+  font-size: small;
+}
+
+.btn.fw {
+  width: 100%;
+}
+
+.btn:hover {
+  background-color: var(--form-element-focus-color);
 }
