--- a/app/views/sales/index.html.slim
+++ b/app/views/sales/index.html.slim
@@ -22,6 +22,7 @@ main.wide
             br
             | Updated
           th Woo ID
+          th Shopify ID
           th.right Actions
       tbody
         = render @sales
