--- a/app/views/sales/index.html.slim
+++ b/app/views/sales/index.html.slim
@@ -1,6 +1,8 @@
-= render "_shared/notice"
+- subheading = "Previously run on #{Config.shopify_sales_sync_time}" if Config.shopify_sales_sync_time.present?
 
-= render "_shared/nav-index", model: @sales
+= render "_shared/notice"
+= render "_shared/modal-container", heading: "Sales Synchronization", subheading:, content_partial: "modal_sync_menu"
+= render "_shared/nav-index", model: @sales, show_modal: true
 
 main.wide
   .search-navigation
