Refactor: Improve sale display with Shopify and WooCommerce links
This commit enhances the display of sales information by adding direct links to the corresponding orders in Shopify and WooCommerce admin panels.

The following changes were made:

- Modified `app/views/sales/show.html.slim` to include links to Shopify and WooCommerce orders based on the presence of `shopify_id` or `woo_id` attributes on the `@sale` object.
- Added conditional rendering to display the sale number and a link to the order in the respective platform's admin panel.
- Updated the heading to "Sale" if neither `shopify_id` nor `woo_id` is present.
- Used `shopify_id_short` instead of `shopify_id` for display and link generation.

--- a/app/views/sales/show.html.slim
+++ b/app/views/sales/show.html.slim
@@ -6,13 +6,18 @@ nav
       ul
         li = link_to "All sales", sales_path
       hgroup
-        - if @sale.woo_id.blank?
-          h1 Sale
-        - else
+        - if @sale.shopify_id.present?
+          h1.relative.w-fit
+            | Sale №#{@sale.shopify_id_short}
+            = link_to "https://admin.shopify.com/store/68d8f5-af/orders/#{@sale.shopify_id_short}", class: "link-icn h1"
+              = inline_svg "link-icn.svg"
+        - elsif @sale.woo_id.present?
           h1.relative.w-fit
             | Sale №#{@sale.woo_id}
             = link_to "https://store.handsomecake.com/wp-admin/post.php?post=#{@sale.woo_id}&action=edit", class: "link-icn h1"
               = inline_svg "link-icn.svg"
+        - else
+          h1 Sale
         h4 = @sale.title
   ul
     li = render "_shared/action-edit", route: url_for(controller: "#{@sale.model_name.plural}", action: "edit", id: @sale), btn: true
